--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
 project(TaskSystemExample)
 
-SET(PLUGIN_INSTALL_PATH "${CMAKE_BINARY_DIR}/ts_executors" CACHE STRING "Path to collect dynamic libs and application")
+SET(PLUGIN_INSTALL_PATH "${CMAKE_BINARY_DIR}/../ts_executors" CACHE STRING "Path to collect dynamic libs and application")
+
+SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -g)
 
 add_subdirectory(TaskSystem)
 add_subdirectory(PrinterExecutor)
 add_subdirectory(RaytracerExecutor)
+
