--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "RaytracerExecutor/urban-spork"]
 	path = RaytracerExecutor/urban-spork
-	url = git@github.com:poseidon4o/urban-spork.git
+	url = git@github.com:BorisVassilev1/urban-spork.git
