--- a/TaskSystem/CMakeLists.txt
+++ b/TaskSystem/CMakeLists.txt
@@ -16,5 +16,6 @@ set(HEADERS
 add_executable(${PROJECT_NAME} "${SOURCES};${HEADERS}")
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE TS_EXECUTOR_PATH="${PLUGIN_INSTALL_PATH}")
+target_compile_options(${PROJECT_NAME} PRIVATE "-g")
 
 install(TARGETS ${PROJECT_NAME} DESTINATION ${PLUGIN_INSTALL_PATH})
