--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,4 @@ SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -g)
 add_subdirectory(TaskSystem)
 add_subdirectory(PrinterExecutor)
 add_subdirectory(RaytracerExecutor)
-
+add_subdirectory(BRDFExecutor)
