--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.25)
 project(TaskSystemExample)
 
+SET(CMAKE_INSTALL_PREFIX ./ts_executors/)
+
 SET(PLUGIN_INSTALL_PATH "${CMAKE_BINARY_DIR}/../ts_executors" CACHE STRING "Path to collect dynamic libs and application")
 
 SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -g)
