--- a/BRDFExecutor/CMakeLists.txt
+++ b/BRDFExecutor/CMakeLists.txt
@@ -6,10 +6,10 @@ set(SOURCES
 	BRDFExecutor.cpp
 )
 
-add_subdirectory(glm)
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
 
 target_include_directories(${PROJECT_NAME} PUBLIC ../TaskSystem)
-target_include_directories(${PROJECT_NAME} PUBLIC glm)
+target_include_directories(${PROJECT_NAME} PUBLIC ../libs/glm)
+target_include_directories(${PROJECT_NAME} PUBLIC ../libs/urban-spork/src/)
 
 install(TARGETS ${PROJECT_NAME} DESTINATION ${PLUGIN_INSTALL_PATH})
